public static class NameHash
{
    public static readonly string XFloat = "DirX";
    public static readonly string YFloat = "DirY";
    public static readonly string CommonAttackTrigger = "CommonAttack";
    public static readonly string SkillTrigger = "Skill";
    public static readonly string SpecialAttackTrigger = "SpecialAttack";
    public static readonly string TumbleTrigger = "Tumble";
    public static readonly string TakeHitTrigger = "TakeHit";
    public static readonly string IsDeathBool = "IsDeath";
    public static readonly string CanSurfBool = "CanSurf";
}
